tests/NormalTests/paczka2/big_fuzzy/21295524.err
Error in line 17: W7n9 A822 95,8
Error in line 29: W7n9 A822 21,5
Error in line 26: k3o A20 87,7
Error in line 39: W7n9 A822 70,4
Error in line 41: a3c A20 63,6
Error in line 32: PqM A822 65,0
Error in line 54: W7n9 S5H5 H7,5
Error in line 52: a3c A822 29,7
Error in line 56: gkiwUA3u A20 50,9
Error in line 57: a3c S403 3,5
Error in line 64: S565 S565 55,8
Error in line 72: k3o A20 92,1
Error in line 95: S565 A20 84,2
Error in line 96: S565 S565 77,7
Error in line 94: a3c A20 1,3
Error in line 99: k3o S565 40,7
Error in line 102: a3c A822 10,8
Error in line 46: W7n9 S565 32,6
Error in line 107: W7n9 A20 7,9
Error in line 116: gkiwUA3u A20 20,1
Error in line 115: W7n9 A822 25,1
Error in line 124: S565 A20 68,8
Error in line 126: S565 S565 90,9
Error in line 133: gkiwUA3u A20 64,4
Error in line 143: W7n9 S403 10,5
Error in line 146: a3c A822 277,5
Error in line 155: a3c S565 79,2
Error in line 156: a3c A20 60,7
Error in line 165: k3o A20 134,82
Error in line 154: PqM S403 51,9
Error in line 167: PqM A822 53,4
Error in line 153: gkiwUA3u S565 72,8
Error in line 163: k3o A20 69,2
Error in line 182: a3c S403 92,8
Error in line 178: gkiwUA3u A822 30,8
Error in line 188: W7n9 A822 52,5
Error in line 192: a3c S565 49,7
Error in line 189: PqM A20 96,0
Error in line 208: oga S565 ;5,2
Error in line 209: S565 S565 148,14
Error in line 215: PqM A20 55,0
Error in line 217: W7n9 S565 3,0
Error in line 221: oga S565 58,2
Error in line 235: gkiwUA3u S565 0,1
Error in line 204: S565 S565 78,1
Error in line 237: gkiwUA3u A20 42,3
Error in line 242: S565 A20 -1,0
